syntax = "proto3";

option csharp_namespace = "NortwindApiSampler.Services";

import "google/protobuf/empty.proto";

service CustomerService {
	rpc GetAllCustomers (google.protobuf.Empty) returns (CustomerResponse);
}

message CustomerResponse {
	repeated CustomerMessage customers = 1;
}

message CustomerMessage {
	string customerId = 1;
	string companyName = 2;
	string contactName = 3;
}